--- a/p8105_hw2_jf3200.md
+++ b/p8105_hw2_jf3200.md
@@ -6,14 +6,14 @@ Jessica Flynn
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------- tidyverse 1.3.0 --
+    ## -- Attaching packages -------------------------------------- tidyverse 1.3.0 --
 
     ## v ggplot2 3.3.2     v purrr   0.3.4
     ## v tibble  3.0.3     v dplyr   1.0.2
     ## v tidyr   1.1.2     v stringr 1.4.0
     ## v readr   1.3.1     v forcats 0.5.0
 
-    ## -- Conflicts ---------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ----------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -99,8 +99,78 @@ Additional data sheets include precipitation data by month. Here, we
 looked specifically at the years 2017 and 2018. There are a total of 24
 rows in the data for these two years. The columns in the datset include
 year, month, total, month\_name. The total precipitation in 2018 was
-70.33.
+70.33and the total in 2017 was 32.93.
 
 ## Problem 2
+
+Read in NYC Transit Data
+
+``` r
+transit_df = 
+  read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  janitor::clean_names() %>% 
+  select(line, station_name, station_latitude, station_longitude,    starts_with("route"),entry, vending, entrance_type, ada) %>% 
+  mutate(entry = ifelse(entry == "YES", TRUE, FALSE)) %>% 
+  mutate_at(vars(route8:route11), as.character) %>% 
+  pivot_longer(route1:route11, 
+               names_to = "route_number", 
+               values_to = "route_name") %>% 
+  drop_na(route_name)
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_character(),
+    ##   `Station Latitude` = col_double(),
+    ##   `Station Longitude` = col_double(),
+    ##   Route8 = col_double(),
+    ##   Route9 = col_double(),
+    ##   Route10 = col_double(),
+    ##   Route11 = col_double(),
+    ##   ADA = col_logical(),
+    ##   `Free Crossover` = col_logical(),
+    ##   `Entrance Latitude` = col_double(),
+    ##   `Entrance Longitude` = col_double()
+    ## )
+
+    ## See spec(...) for full column specifications.
+
+This dataset contains data related to the entrances and exits for each
+subway station in NYC.
+
+The cleaning steps thus far have included renaming the columns to be all
+snake-case and lowercase using `janitor::clean_names`. Next, I used
+`select()`to retain the columns of interest and converted `entry`from a
+character to a logical variable. These data were not in a tidy format.
+Having route1- route11 each as columns indicates to us that this may not
+be the tidiest way to present the data. In order to tidy these data, I
+first converted all of the route variables to be of the same class using
+`as.character()`, and then I used `pivot_longer` to create the variables
+`route_name` (A/B/C/1/2/3, etc) and `route_number`(route1, route2, etc).
+There were many `NA` values in the route name after the data tidying
+step, so these were omitted using `drop_na()`
+
+Following the data tidying, there are 4270 rows and 10 columns. The
+variables in this dataset include `line`, station-level variables such
+as name, latitude and longitude, `route_name` and `route_number`,
+`entry`, `vending`, `entrance_type` and `ada`, which indicates ADA
+compliance.
+
+Find distinct stations and answer questions
+
+``` r
+#Make this a dataframe to call since we will use it to answer multiple questions
+
+transit_df_distinct =  
+  transit_df %>% 
+    distinct(station_name,line, .keep_all = TRUE)
+```
+
+  - The number of distinct stations defined by name and line is 465.
+  - The number of stations that are ADA compliant is 84.
+  - The proportion of station entrances/ exits without vending that
+    allow entrance is 0.31
+  - The number of distinct stations that serve the A train is 60
+  - Of the stations that serve the A train 17 are ADA compliant
 
 ## Problem 3
