--- a/p8105_hw2_jf3200.Rmd
+++ b/p8105_hw2_jf3200.Rmd
@@ -76,7 +76,7 @@ precip_df =
 
 This dataset contains information from the Mr. Trashwheel trash collector in Baltimore, MD. As trash enters the harbor, the trashwheel collects that trash and stores it in a dumpster. The dataset contains information on year, month and trash collected. Some specific trash types that are reported on include `cigarette_butts`, `chip_bags` and `plastic_bottles`, among others. There are also some metrics regarding the trash including `weight_tons` and `volume_cubic_yards`. There are a total of `r nrow(trashwheel_df)` rows in the final dataset and a total of `r ncol(trashwheel_df)` columns. The median number of sportsballs in a dumpster in 2017 was `r trashwheel_df %>% filter(year == 2017) %>% pull(sports_balls) %>% median()`.
 
-Additional data sheets include precipitation data by month. Here, we looked specifically at the years 2017 and 2018. There are a total of `r nrow(precip_df)` rows in the data for these two years. The columns in the datset include `r colnames(precip_df)`. The total precipitation in 2018 was `r precip_df %>% filter(year == 2018) %>% pull(total) %>% sum()`and the total in 2017 was  `r precip_df %>% filter(year == 2017) %>% pull(total) %>% sum()`.
+Additional data sheets include precipitation data by month. Here, we looked specifically at the years 2017 and 2018. There are a total of `r nrow(precip_df)` rows in the data for these two years. The columns in the datset include `r colnames(precip_df)`. The total precipitation in 2018 was `r precip_df %>% filter(year == 2018) %>% pull(total) %>% sum()` and the total in 2017 was  `r precip_df %>% filter(year == 2017) %>% pull(total) %>% sum()`.
 
 ## Problem 2 
 
@@ -85,20 +85,21 @@ Read in NYC Transit Data
 transit_df = 
   read_csv("./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
   janitor::clean_names() %>% 
-  select(line, station_name, station_latitude, station_longitude,    starts_with("route"),entry, vending, entrance_type, ada) %>% 
+  select(line, station_name, station_latitude, station_longitude,starts_with("route"),entry, vending, entrance_type, ada) %>% 
   mutate(entry = ifelse(entry == "YES", TRUE, FALSE)) %>% 
-  mutate_at(vars(route8:route11), as.character) %>% 
+  mutate_at(vars(route8:route11),
+            as.character) %>% 
   pivot_longer(route1:route11, 
-               names_to = "route_number", 
-               values_to = "route_name") %>% 
-  drop_na(route_name)
+               names_to = "route_name", 
+               values_to = "route_number") %>% 
+  drop_na(route_number)
 
 ```
 
 
 This dataset contains data related to the entrances and exits for each subway station in NYC. 
 
-The cleaning steps thus far have included renaming the columns to be all snake-case and lowercase using `janitor::clean_names`. Next, I used `select()`to retain the columns of interest and converted `entry`from a character to a logical variable. These data were not in a tidy format. Having route1- route11 each as columns indicates to us that this may not be the tidiest way to present the data. In order to tidy these data, I first converted all of the route variables to be of the same class using `as.character()`, and then I used `pivot_longer` to create the variables `route_name` (A/B/C/1/2/3, etc) and `route_number`(route1, route2, etc). There were many `NA` values in the route name after the data tidying step, so these were omitted using `drop_na()`
+The cleaning steps thus far have included renaming the columns to be all snake-case and lowercase using `janitor::clean_names()`. Next, I used `select()`to retain the columns of interest and converted `entry`from a character to a logical variable. These data were not in a tidy format. Having route1- route11 each as columns indicates to us that this may not be the tidiest way to present the data. In order to tidy these data, I first converted all of the route variables to be of the same class using `as.character()`, and then I used `pivot_longer()` to create the variables `route_name` (route1, route2, etc).and `route_number` (A/B/C/1/2/3, etc). There were many `NA` values in the `route_number` after the data pivoting step, so these were omitted using `drop_na()`
 
 
 Following the data tidying, there are `r nrow(transit_df)` rows and `r ncol(transit_df)` columns. The variables in this dataset include `line`, station-level variables such as name, latitude and longitude, `route_name` and `route_number`, `entry`, `vending`, `entrance_type` and `ada`, which indicates ADA compliance. 
@@ -110,16 +111,78 @@ Find distinct stations and answer questions
 
 transit_df_distinct =  
   transit_df %>% 
-    distinct(station_name,line, .keep_all = TRUE)
+    distinct(station_name,line, 
+             .keep_all = TRUE)
   
 ```
 
 * The number of distinct stations defined by name and line is `r nrow(transit_df_distinct)`. 
 * The number of stations that are ADA compliant is `r transit_df_distinct %>% filter(ada==TRUE) %>% nrow()`. 
-* The proportion of station entrances/ exits without vending that allow entrance is `r round(transit_df %>% filter(vending=="NO", entry==TRUE) %>% nrow() / transit_df %>% filter(vending=="NO")%>% nrow(),2) `
-* The number of distinct stations that serve the A train is `r transit_df_distinct %>% filter(route_name=="A") %>% nrow()`
-* Of the stations that serve the A train `r transit_df_distinct %>% filter(route_name=="A", ada==TRUE) %>% nrow()` are ADA compliant
+* The proportion of station entrances/ exits without vending that allow entrance is `r round(transit_df %>% filter(vending=="NO", entry==TRUE) %>% nrow() / transit_df %>% filter(vending=="NO")%>% nrow(),2)`.
+* The number of distinct stations that serve the A train is `r transit_df_distinct %>% filter(route_number=="A") %>% nrow()`
+* Of the stations that serve the A train, `r transit_df_distinct %>% filter(route_number=="A", ada==TRUE) %>% nrow()` are ADA compliant
 
 ## Problem 3 
 
+Read in and clean data pols-month data
+```{r pols_month_data}
+pols_df = 
+  read_csv("./data/pols-month.csv") %>% 
+  separate(col = mon, into = c("year", "month", "day"), 
+           sep = '-', 
+           convert = TRUE) %>% 
+  mutate(president = case_when(
+           prez_gop == 1 ~ "gop",
+           prez_dem == 1 ~ "dem")) %>% 
+  select(-prez_gop, -prez_dem, -day)
+
+
+pols_df =
+	left_join(pols_df, month_df, by = "month") %>% 
+  select(year, month_name, everything(), -month)
+
+```
+
+Read in and clean snp dataset
+```{r snp_data}
+snp_df = 
+  read_csv("./data/snp.csv") %>% 
+  separate(col = date, into = c("month", "day", "year"), 
+           sep = '/', 
+           convert = TRUE) %>%
+  arrange(year, month) %>% 
+  select(year, month, close)
+
+snp_df =
+	left_join(snp_df, month_df, by = "month") %>% 
+  select(year, month_name, everything(), -month)
+
+```
+
+Read in and clean unemployment data
+```{r unemployment_data}
+unemploy_df = 
+  read_csv("./data/unemployment.csv", 
+           col_names = c("year", month.name), 
+           skip = 1) %>%
+  pivot_longer(cols = January:December,
+               names_to = "month_name",
+               values_to = "unemploy_rate")
+```
+
+Join pols, snp and unemployment datasets
+```{r merge_datasets}
+# merge snp into pols
+pols_snp <- inner_join(pols_df, snp_df, by = c("year", "month_name"))
+#merge unemployment into pols_snp
+pols_snp_unemploy <- inner_join(pols_snp, unemploy_df, by = c("year", "month_name"))
+
+```
+
+
+The `pols_df` dataset contains `r nrow(pols_df)` rows and `r ncol(pols_df)` columns of data related to the number of national politicians and their party affiliations (democratic or republican)  by month and year. The `snp_df` contains `r nrow(snp_df)` rows and `r ncol(snp_df)` columns of data related to  Standard & Poor’s stock market index (S&P). Lastly, `unemploy_df` contains `r nrow(unemploy_df)` rows and `r ncol(unemploy_df)` columns of data regarding unemployment rates by year and month. The `pols_df` spanned from `r min(pull(pols_df, year))` to `r max(pull(pols_df, year))`, the `snp_df` from `r min(pull(snp_df, year))` to `r max(pull(snp_df, year))` and the `unemploy_df` from `r min(pull(unemploy_df, year))` to `r max(pull(unemploy_df, year))`
+
+These datasets are the product of certain data wrangling procedures, including using `separate()` to break up columns into `day`, `month` and `year`. Additionally, for `unemploy_df`, `pivot_longer()` was used to change the columns of January - December into one `month` column. `month` was changed into `month_name` in all datasets. 
+
+After combining the datasets using `inner_join()`, the final dataset had dimensions `r nrow(pols_snp_unemploy)` rows by `r ncol(pols_snp_unemploy)` columns. This resulting dataset has all information available for the years `r min(pull(pols_snp_unemploy, year))`  to `r max(pull(pols_snp_unemploy, year))`. Key variables in the dataset include the number of both democratic and republican senators, governors, and representatives (`gov_gop`, `sen_gop`, `rep_gop`,`gov_dem`, `sen_dem`,`rep_dem`) by month and year. Additionally, there is information on whether the president was democratic or republican in `president`. Lastly, the data contains information on unemployment rate (`unemploy_rate`) and the closing s&p stock index (`close`) by month and year. 
 
