--- a/p8105_hw2_jf3200.md
+++ b/p8105_hw2_jf3200.md
@@ -97,7 +97,7 @@ median number of sportsballs in a dumpster in 2017 was 8.
 
 Additional data sheets include precipitation data by month. Here, we
 looked specifically at the years 2017 and 2018. There are a total of 24
-rows in the data for these two years. The columns in the datset include
+rows in the data for these two years. The columns in the dataset include
 year, month, total, month\_name. The total precipitation in 2018 was
 70.33 and the total in 2017 was 32.93.
 
@@ -157,21 +157,10 @@ as name, latitude and longitude, `route_name` and `route_number`,
 `entry`, `vending`, `entrance_type` and `ada`, which indicates ADA
 compliance.
 
-Find distinct stations and answer questions
-
-``` r
-#Make this a dataframe to call since we will use it to answer multiple questions
-
-transit_df_distinct =  
-  transit_df %>% 
-    distinct(station_name,line, 
-             .keep_all = TRUE)
-```
-
   - The number of distinct stations defined by name and line is 465.
-  - The number of stations that are ADA compliant is 84.
+  - The number of stations that are ADA compliant is 84
   - The proportion of station entrances/ exits without vending that
-    allow entrance is 0.31.
+    allow entrance is 0.311.
   - The number of distinct stations that serve the A train is 60
   - Of the stations that serve the A train, 17 are ADA compliant
 
